2008-06-05  Kolja Waschk <kawk>

   * src/bus/bf548_ezkit.c, src/bus/fjmem.c, src/bus/ppc405ep.c,
     src/bus/sh7727.c, src/bus/prototype.c, src/bus/sa1110.c,
     src/bus/ppc440gx_ebc8.c, src/bus/sh7750r.c, src/bus/tx4925.c,
     src/bus/pxa2x0.c, src/bus/bf533_stamp.c, src/bus/bf533_ezkit.c,
     src/bus/bf537_stamp.c, src/bus/ixp425.c, src/bus/avr32.c,
     src/bus/zefant-xs3.c, src/bus/h7202.c, src/bus/mpc824x.c,
     src/bus/bcm1250.c, src/bus/sharc21065l.c, src/bus/au1500.c,
     src/bus/lh7a400.c, src/bus/sh7751r.c, src/bus/mpc5200.c,
     src/bus/jopcyc.c, src/bus/slsup3.c, src/bus/bf561_ezkit.c,
     src/bus/s3c4510x.c, src/bus/ejtag.c: Partial [ 1984813 ]
	  Bus driver cleanup: Changed mallocs to callocs, added (NULL) pointer
	  for *init to the drivers where it was missing (Hartley Sweeten)

2008-05-29  Kolja Waschk <kawk>

   *  src/tap/cable/wiggler.c src/tap/cable/generic_usbconn.c,
      src/tap/cable/usbblaster.c, src/tap/cable/vision_ep9307.c,
      src/tap/cable/jim.c, src/tap/cable/ft2232.c,
      src/tap/cable/generic_parport.c: More malloc/free cleanup
	   in cable drivers (Hartley Sweeten)

2008-05-28  Kolja Waschk <kawk>

   * src/cmd/cable.c, src/tap/cable/wiggler.c,
     src/tap/cable/generic_usbconn.c, src/tap/cable/vision_ep9307.c,
     src/tap/cable/jim.c, src/tap/cable/ft2232.c, 
      src/tap/cable/usbblaster.c, src/tap/cable/generic_parport.c: Cable
      connect/disconnect cleanup, fix malloc/free issues (Hartley Sweeten)

2008-05-27  Arnim Laeuger  <arniml@users.sourceforge.net>

   * UrJTAG.txt: document progress option of svf command
   * src/cmd/svf.c (cmd_svf_run): new command option 'progress'
   * src/svf/svf.c (svf_run), include/svf.h (svf_run): new parameter
     print_progress
   * src/svf/svf_flex.l (fix_yylloc_nl): report line / total number

2008-05-26  Arnim Laeuger  <arniml@users.sourceforge.net>

   [adding svf progress output] (Steve Franks)
   * src/svf/svf_bison.y (svf_bison_init): hand down parameters for scanner